# raft

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile.centos:7  Dockerfile.leap.42.3  Dockerfile.sles.12.3  Dockerfile.ubuntu.18.04  HOWTO.rst  Jenkinsfile  Makefile  Makefile-rpm.mk  Makefile.am  README.rst  configure.ac  install.sh  make-tests.sh  mock_send_functions.c  mock_send_functions.h  package.json  raft.h  raft.pc.in  raft.rpmlintrc  raft.spec  raft.spec.in  raft_candidate.c  raft_connection.h  raft_follower.c  raft_leader.c  raft_log.c  raft_log.h  raft_msghandler.c  raft_msghandler.h  raft_node.c  raft_peer.c  raft_private.h  raft_server.c  test_candidate.c  test_follower.c  (+7 more)
.github/: CODEOWNERS
contrib/CLinkedListQueue/: Makefile  README.md  linked_list_queue.c  linked_list_queue.h  package.json
contrib/CLinkedListQueue/tests/: CuTest.c  test_linked_list_queue.c
debian/: changelog  control  copyright  libraft-dev.dirs  libraft-dev.install  rules
include/: raft.h  raft_log.h  raft_private.h  raft_types.h
packaging/: Dockerfile.centos.7  Dockerfile.leap.15  Dockerfile.leap.42.3  Dockerfile.mockbuild  Dockerfile.sles.12.3  Dockerfile.ubuntu.18.04  Dockerfile.ubuntu.20.04  Makefile  Makefile_distro_vars.mk  Makefile_packaging.mk  debian_chrootbuild  rpm_chrootbuild
scripts/: amalgamate.sh
src/: SConscript  heap.c  heap.h  raft_log.c  raft_node.c  raft_server.c  raft_server_properties.c  server.c
src/transport/: core.capnp  core.fbs
test/: test_node.c  test_server_request_vote.c
test/lib/: fault.c  fault.h  heap.c  heap.h  io.c  io.h  store.c  store.h
test/unit/: main.c  test_server.c
tests/: CMakeLists.txt  CuTest.c  CuTest.h  log_fuzzer.py  make-tests.sh  mock_send_functions.c  mock_send_functions.h  raft_cffi.py  test_cluster.c  test_cluster.h  test_cluster_more.c  test_log.c  test_log.cpp  test_node.c  test_node.cpp  test_scenario.c  test_scenario.cpp  test_server.c  test_server.cpp  test_snapshotting.c  test_snapshotting.cpp  virtraft2.py
